use overflow: auto on biocViewsTree, now that width is fixed
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/bioconductor.org@65444 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/assets/style/bioconductor.css
+++ b/assets/style/bioconductor.css
@@ -591,7 +591,7 @@ ul.inline_list li {
  float:left;
  height:300px;
  width:100%;
- overflow:scroll;
+ overflow:auto;
 }
 
 .biocViewsTreePadding {
